# mzxplay

./: .gitignore  Cargo.toml  Makefile
.cargo/: config
btb/: 30303.MOD  3D.CHR  AWESOME2.MOD  B-SNAP.SAM  BARD.CHR  BARD.PAL  BERNARD.MZX  CHIME.SAM  CREAK.SAM  CTGOBLIN.GDM  DC.CHR  DC.MOD  DC.PAL  DRIFT.SAM  DROP.SAM  ECHOING.GDM  FAIRLITE.MOD  GORBALU.CHR  GORBALU.PAL  HUNTER.MOD  KRABOOM.SAM  LUNCH.SAM  LUTE1.SAM  LUTE2.SAM  MEDIEVAL.GDM  MIDLALTA.MOD  NOPE.SAM  ORGANBOS.GDM  PATEGA.MOD  ROAR.SAM  SHUTUP.GDM  SNICKER.SAM  THEEND.CHR  VOODOO_P.MOD  VTUNE.MOD  WHOOSH.SAM  YEAH.SAM  YELL.SAM  YOWCH.SAM
src/: audio.rs  board.rs  emscripten.rs  game.rs  main.rs  robot.rs
static/: index.html
