[package]
name = "mzxplay"
version = "0.1.0"
authors = ["Josh Matthews <josh@joshmatthews.net>"]

[dependencies]
env_logger = "0.5"
libmzx = { path = "../libmzx" }
log = "0.4"
num-traits = "0.2"
openmpt = { version = "0.3", path = "../openmpt-rs" }
rand = "0.4"
sdl2 = "0.34"
time = "0.1"

[profile.dev]
codegen-units = 1
